<resources>
    <!--APP-->
    <string name="app_name">GoalManager</string>

    <!--MainActivity-->
    <string name="new_goal_button">New Goal</string>
    <string name="manage_category_button">Manage Categories</string>
    <string name="goal_view_delete">Delete</string>

    <!--addButton_popup-->
    <string name="addButton_header">Add Goal:</string>
    <string name="addButton_goal_title_hint">Goal Title</string>
    <string name="addButton_goal_body_hint">Goal Description</string>
    <string name="addButton_confirm">Add</string>
    <string name="addButton_cancel">Cancel</string>

    <!--Manage Categories Activity-->
    <string name="category_activity_title">My Categories</string>
    <string name="new_category_button">New Category</string>

    <!--add_category_popup-->
    <string name="add_category_header">New Category:</string>
    <string name="add_category_hint">Category Name</string>
    <string name="add_category_confirm">Add</string>
    <string name="add_category_cancel">Cancel</string>

    <!--deleteCategory_popup-->
    <string name="deleteCategory_header">Confirm DELETING this category.</string>
    <string name="deleteCategory_confirm">Delete</string>
    <string name="deleteCategory_cancel">Cancel</string>

    <!--modifyGoal_popup-->
    <string name="modifyGoal_header">Modify Goal:</string>
    <string name="modifyGoal_goal_title_hint">Goal Title</string>
    <string name="modifyGoal_goal_body_hint">Goal Description</string>
    <string name="modifyGoal_confirm">Modify</string>
    <string name="modifyGoal_cancel">Cancel</string>

    <!--deleteGoal_popup-->
    <string name="deleteGoal_header">Confirm DELETING this goal.</string>
    <string name="deleteGoal_confirm">Delete</string>
    <string name="deleteGoal_cancel">Cancel</string>

    <!--Goal View-->
    <string name="category_title">Category:</string>
    <string name="type_title">Type:</string>
    <string name="reminder_title">Reminder Options: </string>
    <string name="Monday">M</string>
    <string name="Tuesday">T</string>
    <string name="Wednesday">W</string>
    <string name="Thursday">T</string>
    <string name="Friday">F</string>
    <string name="Saturday">S</string>
    <string name="Sunday">S</string>
    <string name="Complete">Complete</string>
    <string name="set_reminder">Set</string>


    <!--SharedPrefs-->
    <string name="shared_goals">goals</string>
    <string name="shared_categories">categories</string>
    <string name="shared_goal_id">goalId</string>
</resources>
