<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteGoal_header"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_delete_button"
            android:text="@string/deleteGoal_confirm"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/cancel_delete_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_delete_button"
            android:text="@string/deleteGoal_cancel"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</LinearLayout>